[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/ease_container/EaseContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://EaseTest.gd" type="Script" id=2]

[node name="EaseTest" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EaseContainer" parent="." instance=ExtResource( 1 )]
margin_right = 139.0
margin_bottom = 126.0
transition = 0.0

[node name="ColorRect" type="ColorRect" parent="EaseContainer"]
margin_right = 139.0
margin_bottom = 126.0
color = Color( 0, 0.109804, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 235.0
margin_top = 115.0
margin_right = 800.0
margin_bottom = 434.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 565.0
margin_bottom = 157.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 161.0
margin_right = 565.0
margin_bottom = 319.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EaseContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 185.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
transition = 0.5

[node name="Control" type="ColorRect" parent="VBoxContainer/HBoxContainer/EaseContainer"]
margin_right = 185.0
margin_bottom = 158.0
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer/EaseContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5
margin_top = -37.5
margin_right = 39.5
margin_bottom = 37.5

[node name="EaseContainer2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 189.0
margin_right = 375.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
transition = 0.5

[node name="Control" type="ColorRect" parent="VBoxContainer/HBoxContainer/EaseContainer2"]
margin_right = 186.0
margin_bottom = 158.0
color = Color( 0.0784314, 1, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/HBoxContainer/EaseContainer2/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5
margin_top = -37.5
margin_right = 39.5
margin_bottom = 37.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EaseContainer3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 379.0
margin_right = 565.0
margin_bottom = 158.0
size_flags_horizontal = 3
size_flags_vertical = 3
transition = 0.5

[node name="Control" type="ColorRect" parent="VBoxContainer/HBoxContainer/EaseContainer3"]
margin_right = 186.0
margin_bottom = 158.0
color = Color( 0.0431373, 0.0784314, 0.980392, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/HBoxContainer/EaseContainer3/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.5
margin_top = -37.5
margin_right = 39.5
margin_bottom = 37.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 263.0
margin_top = 455.0
margin_right = 451.0
margin_bottom = 519.0
text = "TOGGLE"

[node name="Button2" type="Button" parent="."]
margin_left = 434.0
margin_top = 453.0
margin_right = 622.0
margin_bottom = 517.0
text = "TOGGLE2"

[node name="Button3" type="Button" parent="."]
margin_left = 608.0
margin_top = 457.0
margin_right = 796.0
margin_bottom = 521.0
text = "MOVE"

[node name="Button4" type="Button" parent="."]
margin_left = 318.0
margin_top = 536.0
margin_right = 506.0
margin_bottom = 600.0
text = "ATTACH"

[node name="Button5" type="Button" parent="."]
margin_left = 531.0
margin_top = 529.0
margin_right = 719.0
margin_bottom = 593.0
text = "DETACH"
